--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,3 +9,7 @@ CONFIG_ZMK_DISPLAY=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# Increasing the transmit power of the keyboard's BLE radio may reduce the severity of this problem. 
+# To do this, set the CONFIG_BT_CTLR_TX_PWR_PLUS_8
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
