--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,3 +13,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # Increasing the transmit power of the keyboard's BLE radio may reduce the severity of this problem. 
 # To do this, set the CONFIG_BT_CTLR_TX_PWR_PLUS_8
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable bongo cat widget
+CONFIG_ZMK_WIDGET_BONGO_CAT=y
